--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -40,60 +40,52 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-secondary-color">
+<div class="container-fluid container-padded text-center bg-secondary-color key-contacts">
   <div class="container">
     <div class="row">
       <div class="col">
         <h1>Key Contacts</h1>
-        <p>Blah de blah de blah de blah</p>
+        <p>The people to contact about enquiries.</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-6 col-md-3">
-        <div class="card">
+      <div class="col-md-6 col-lg-3">
+        <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
             <h4 class="card-title">Station Manager</h4>
+            <p><a href="mailto:station.manager@ury.org.uk" title="Email the Station Manager">station.manager<br>@ury.org.uk</a></p>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="mailto:station.manager@ury.org.uk" title="Email the Station Manager">station.manager@ury.org.uk</a></small>
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-3">
-        <div class="card">
+      <div class="col-md-6 col-lg-3">
+        <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
             <h4 class="card-title">Programme Controller</h4>
+            <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller<br>@ury.org.uk</a></p>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller@ury.org.uk</a></small>
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-3">
-        <div class="card">
+      <div class="col-md-6 col-lg-3">
+        <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
             <h4 class="card-title">Music Submissions</h4>
+            <p class="card-text"><a href="mailto:music@ury.org.uk" title="Email the Music team">music<br>@ury.org.uk</a></p>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="mailto:music@ury.org.uk" title="Email the Music team">music@ury.org.uk</a></small>
           </div>
         </div>
       </div>
-      <div class="col-6 col-md-3">
-        <div class="card">
+      <div class="col-md-6 col-lg-3">
+        <div class="card bg-transparent">
           <img class="card-img-top rounded-circle" src="/images/people-profile.jpg" alt="Profile Image">
           <div class="card-block">
             <h4 class="card-title">Assistant Station Manager</h4>
+            <p class="card-text"><a href="mailto:assistant.station.manager@ury.org.uk" title="Email the Assistant Station Manager">assistant.station.manager<br>@ury.org.uk</a></p>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted"><a href="mailto:assistant.station.manager@ury.org.uk" title="Email the Assistant Station Manager">assistant.station.manager@ury.org.uk</a></small>
           </div>
         </div>
       </div>
