--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-primary-color">
+<div class="container-fluid container-padded text-center bg-primary">
   <div class="row">
     <div class="col">
       <h1>Got some news for us?</h1>
@@ -40,7 +40,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-secondary-color key-contacts">
+<div class="container-fluid container-padded text-center bg-secondary key-contacts">
   <div class="container">
     <div class="row">
       <div class="col">
