--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -32,7 +32,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-primary-color">
+<div class="container-fluid container-padded text-center bg-primary">
   <h2>How Do I Get A Show?</h2>
   <div class="container">
     <div class="row">
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-third-color">
+<div class="container-fluid container-padded text-center bg-third">
   <h2>How Do I Join?</h2>
   <div class="container">
     <div class="row">
@@ -54,7 +54,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-secondary-color">
+<div class="container-fluid container-padded bg-secondary">
   <h2 class="text-center">Signup today!</h2>
   <div class="container">
     <form name="getInvolvedForm" class="form-getinvolved">
