--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -1,9 +1,11 @@
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
-  <div class="row text-center align-items-center">
-    <div class="col">
-      <h1 class="display-2">Radio.</h1>
-      <h2 class="display-4">By Students, For Students.</h2>
+  <div class="container">
+    <div class="row text-center align-items-center">
+      <div class="col">
+        <h1 class="display-2">Radio.</h1>
+        <h2 class="display-4">By Students, For Students.</h2>
+      </div>
     </div>
   </div>
 </div>
