--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -6,7 +6,7 @@
       {{template "banner" .}}
     </div>
   </div>
-  <div class="container-fluid index-infobar">
+  <div id="index-infobar" class="container-fluid bg-off-white container-padded">
     <div class="container">
       <div class="row justify-content-center">
         <div class="pb-4 col-lg-3">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid index-schedule">  
+  <div id="index-schedule" class="container-fluid container-padded">  
     <div class="container">
       <h2>Today's Schedule</h2>
       <h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
@@ -160,7 +160,7 @@
     </div>
   </div> <!-- /outer containter -->
   
-  <div class="container-fluid index-videos py-2">
+  <div id="index-videos" class="container-fluid container-padded bg-secondary">
     <h2>URY Sessions</h2>
     <div class="row scroll-horiz">
       <div class="col-10 col-sm-7 col-md-4 col-lg-3">
@@ -180,7 +180,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid index-uryplayer py-2">
+  <div id="index-uryplayer" class="container-fluid container-padded bg-third">
     <h2>Podcasts</h2>
     <div class="row scroll-horiz">
       <div class="col-11 col-sm-7 col-md-3">
