make css more specific to podcast cards only

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -184,7 +184,7 @@
     <h2>Podcasts</h2>
     <div class="row scroll-horiz">
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -193,7 +193,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -202,7 +202,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -211,7 +211,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -229,7 +229,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -238,7 +238,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -247,7 +247,7 @@
         </div>
       </div>
       <div class="col-11 col-sm-7 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="col-11 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
@@ -265,7 +265,7 @@
         </div>
       </div>
       <div class="col-11 col-md-3">
-        <div class="card">
+        <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
