Use text-center class rather than inline css

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -37,10 +37,10 @@
     </div>
   </div>
   <div id="index-schedule" class="container-fluid container-padded">  
-    <div class="container">
+    <div class="container text-center">
       <h2>Today's Schedule</h2>
-      <h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
-      <p style="text-align:center;">In the meantime, how about some On Demand content?</p>
+      <h3>We're not broadcasting today, we'll be back on !!DATE!!.</h3>
+      <p>In the meantime, how about some On Demand content?</p>
       <div class="row">  
         <figure class="col-md-6 large">
           <img src="images/show-current.png" alt="img01">
