--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,45 +1,4 @@
 {{define "content"}}
-<<<<<<< HEAD
-	{{with .PageData}}
-
-	<div class="container outer current-next">
-    	<div class="container">
-
-			{{template "current_and_next" .}}
-
-
-			<div class="row index-banner">
-	  		<div id="index-banner-carousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner" role="listbox">
-          {{range $index, $Banners := .Banners}}
-
-          <div class="item {{ if eq $index 0 }} active {{end}}">
-          	<a href="{{$Banners.Target}}">
-            	<img src="https://ury.org.uk{{$Banners.URL}}" alt="{{$Banners.Alt}}">
-            </a>
-          </div>
-          {{end}}
-        </div>
-        <a class="left carousel-control" href="#index-banner-carousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#index-banner-carousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-	  </div>
-
-		</div><!-- /.container -->
-	</div><!-- /outer containter -->
-
-	 <div class="container outer index-infobar">
-
-	  <div class="row">
-	  	<div class="col-lg-1"></div>
-        <div class="col-lg-4">
-=======
   {{with .PageData}}
   <div class="container-fluid current-next">
     <div class="container">
@@ -51,7 +10,6 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="pb-4 col-lg-3">
->>>>>>> development
           <h2>Send a Message</h2>
           <hr>
           <form id="sendMessage" action="">
@@ -63,19 +21,6 @@
           <h2>Get Involved</h2>
           <hr>
           <div class="row">
-<<<<<<< HEAD
-          	<div class="col-lg-6">
-          		<p>University Radio York has been alive since 1967, when it became the first legal independant radio station in the UK!</p>
-          		<p>Help us continue our legacy by joining the URY team.</p>
-          		<p>Contact our teams to find out more.</p>
-          	</div>
-          	<div class="col-lg-6">
-          		<ul>
-          			<li>List of teams here.</li>
-          		</ul>
-          	</div>
-
-=======
             <div class="col-lg-6">
               <p>University Radio York has been alive since 1968, when it became the first legal independant radio station in the UK!</p>
               <p>Help us continue our legacy by joining the URY team.</p>
@@ -85,20 +30,17 @@
               <ul>
                 <li>List of teams here.</li>
               </ul>
-            </div>    
->>>>>>> development
+            </div>
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-
     </div> <!-- /outer containter -->
 
-    <div class="container outer index-schedule">
-		  <h2>Today's Schedule</h2>
-	  	<h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
-      <p style="text-align:center;">In the meantime, how about some On Demand content?</p>
-      <div class="container">
+    <div id="index-schedule" class="container-fluid container-padded">
+      <div class="container text-center">
+        <h2>Today's Schedule</h2>
+        <h3>We're not broadcasting today, we'll be back on !!DATE!!.</h3>
+        <p>In the meantime, how about some On Demand content?</p>
         <div class="row">
           {{with .CurrentAndNext}}
             {{if .Current}}
@@ -182,18 +124,18 @@
 =======
     </div>
   </div>
-  <div id="index-schedule" class="container-fluid container-padded">  
+  <div id="index-schedule" class="container-fluid container-padded">
     <div class="container text-center">
       <h2>Today's Schedule</h2>
       <h3>We're not broadcasting today, we'll be back on !!DATE!!.</h3>
       <p>In the meantime, how about some On Demand content?</p>
-      <div class="row">  
+      <div class="row">
         <figure class="col-md-6 large">
           <img src="images/show-current.png" alt="img01">
           <figcaption>
             <h3>!!Show Name!!</h3>
             <span>12:00 - 14:00</span>
-            <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>	
+            <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
           </figcaption>
         </figure>
         <div class="col-md-6 small">
@@ -305,7 +247,7 @@
       </div>
     </div>
   </div> <!-- /outer containter -->
-  
+
   <div id="index-videos" class="container-fluid container-padded bg-secondary">
     <h2>URY Sessions</h2>
     <div class="row scroll-horiz">
@@ -345,11 +287,9 @@
             <h4 class="card-title">Card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
->>>>>>> development
         </div>
         {{end}}
       </div>
-<<<<<<< HEAD
     </div> <!-- /outer containter -->
 
 
@@ -389,14 +329,6 @@
         <div class="scroll-body">
           <h2>URY Sessions</h2>
           <div id="youtube-video-slider" class="row">
-=======
-      <div class="col-11 col-sm-7 col-md-3">
-        <div class="card podcast">
-          <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
-          <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
->>>>>>> development
           </div>
         </div>
       </div>
@@ -409,58 +341,12 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-
-    </div> <!-- /outer containter -->
-
-    <div class="container outer index-uryplayer">
-      <div class="scroll-container">
-        <div class="scroll-body">
-          <h2>URY Player: Podcasts</h2>
-          <div class="row">
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-            <div class="col-sm-4 col-md-3 col-lg-2">
-              <div class="thumbnail">
-                <p class="podcast-title">Thumbnail label</p>
-                <img src="images/show-current.png" alt="...">
-                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
-              </div>
-            </div>
-=======
       <div class="col-11 col-sm-7 col-md-3">
         <div class="card podcast">
           <img class="card-img-top img-fluid" src="images/show-current.png" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
->>>>>>> development
           </div>
         </div>
       </div>
@@ -509,15 +395,6 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-
-    </div> <!-- /outer containter -->
-
-
-	{{end}}
-=======
     </div>
   </div> <!-- /outer containter -->
-  {{end}}
->>>>>>> development
 {{end}}
