Some bootstrap4 tidies / fixes

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div> <!-- /outer containter -->
-      <div class="container-fluid user-bio-container">
+      <div class="container-fluid bg-secondary">
         <div class="container">
            <div class="">
             <h2>Bio</h2>
@@ -62,7 +62,7 @@
               </li>
             {{end}}
             </ul>
-            
+
           </div>
         </div>
       </div>
