--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -3,19 +3,19 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsed" aria-controls="collapsed" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">
-    <img src="/images/logo.png" height="34" alt="{{.PageContext.LongName}} Logo" >
+  <a class="navbar-brand" href="{{url "/"}}">
+    <img src="{{url "/images/logo.png"}}" height="34" alt="{{.PageContext.LongName}} Logo" >
   </a>
   <div class="navbar-collapse collapse" id="collapsed">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="#">Schedule</a>
       <a class="nav-item nav-link" href="#">Shows</a>
       <a class="nav-item nav-link" href="#">URY Player</a>
-      <a class="nav-item nav-link" href="/about/">About Us</a>
-      <a class="nav-item nav-link" href="/getinvolved/">Get Involved</a>
-      <a class="nav-item nav-link" href="/contact/">Contact Us</a>
+      <a class="nav-item nav-link" href="{{url "/about/"}}">About Us</a>
+      <a class="nav-item nav-link" href="{{url "/getinvolved/"}}">Get Involved</a>
+      <a class="nav-item nav-link" href="{{url "/contact/"}}">Contact Us</a>
     </div>
-    <form action="/search/" class="form-inline ml-auto">
+    <form action="{{url "/search/"}}" class="form-inline ml-auto">
         <input type="text" name="term" class="form-control" placeholder="Search">
         <button type="submit" class="btn btn-outline-success" alt="Submit">Search</button>
     </form>
