--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -11,10 +11,7 @@
             <a href="#">Listen to more shows on URY On Demand</a>
           </div>
         </div>
-        
-      </div>
-    </div> <!-- /outer containter -->
-      {{end}}
+      {{end}}        
 		  </div>
 	  </div>
     <div class="container-fluid bg-off-white">
@@ -35,11 +32,10 @@
             </div>
           </div>
           <div class="col-12 col-lg-9">
-            <h1 class="mobile-hide page1-title">
+            <h1 class="pt-2">
               <a href="{{.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">{{.Timeslot.Title}}</a>
             </h1>
             <h4 class="text-muted">{{.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}}</h4>
-            <h2></h2>
             <hr>
             <h2 class="page1-subtitle">Description</h2>
             <p>
