--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -1,29 +1,33 @@
 {{define "content"}}
 <div class="container-fluid banner-2 text-overlay">
   <div class="container">
-    <div class="row text-center align-items-center">
-      <div class="col">
-        <h1 class="display-2">Radio.</h1>
+    <div class="row justify-content-center">
+      <div class="text-center">
+        <h1 class="display-1">Radio</h1>
         <h2 class="display-4">By Students, For Students.</h2>
+        <br>
+        <a href="#signUp" class="btn btn-primary-inverse btn-xl">Sign up</a>
       </div>
     </div>
   </div>
 </div>
 <div class="container-fluid container-padded text-center bg-off-white">
-  <div class="row text-center align-items-center">
-    <div class="col">
-      <h3>Want to help York make incredible <strong>Award Winning</strong> radio?</h3>
-      <h3>Want to join one of the best, largest and most diverse societies university has to offer?</h3>
-      <p>Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen,
-        play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
-      </p>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h3>Want to help York make incredible <strong>Award Winning</strong> radio?</h3>
+        <h3>Want to join one of the best, largest and most diverse societies university has to offer?</h3>
+        <p>Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen,
+          play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.
+        </p>
+      </div>
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center">
-  <h2>What Can I Do?</h2>
+<div class="container-fluid container-padded ">
   <div class="container">
     <div class="row">
+      <h2>What Can I Do?</h2>
       <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes)
         and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show!
         Take a look at our <a href="/schedule" title="The URY Schedule">schedule</a>. If you can see a gap, there's no reason you couldn't fill it.
@@ -34,10 +38,10 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-primary">
-  <h2>How Do I Get A Show?</h2>
+<div class="container-fluid container-padded  bg-primary">
   <div class="container">
     <div class="row">
+      <h2>How Do I Get A Show?</h2>
       <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
       <p>Once you have paid, log in to <a href="/myradio/">MyRadio</a> and set up an account, from there you will be able to sign up to training! Under "Get On Air",
         click "Get Studio Trained" and take your pick of training sessions you can attend, click join and you are good to go!
@@ -47,18 +51,19 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded text-center bg-third">
-  <h2>How Do I Join?</h2>
+<div class="container-fluid container-padded  bg-third">
   <div class="container">
     <div class="row">
+      <h2>How Do I Join?</h2>
       <p>If you're ready to sign up right now, you can fill in the form below to sign up to our mailing list and computer system. It's instant and of course there's no commitment to do anything.</p>
       <p>You can also come and <a href="/contact/" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-secondary">
-  <h2 class="text-center">Signup today!</h2>
+<div class="container-fluid container-padded bg-secondary" id="signUp">
   <div class="container">
+    <h1 class="">Signup today!</h1>
+    <hr>
     <form name="getInvolvedForm" class="form-getinvolved">
       <div class="row">
         <fieldset id="getinvolved-personal-details" class="col-md-6">
@@ -81,14 +86,6 @@
           <div class="form-group">
             <label for="phone">Phone Number (Optional)</label>
             <input type="text" id="phone" name="phone" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="sex">Gender</label>
-            <select id="sex" name="sex" class="form-control">
-              <option value="o">Other</option>
-              <option value="m">Male</option>
-              <option value="f">Female</option>
-            </select>
           </div>
           <div class="form-group">
               <label for="college">College</label>
