--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -162,23 +162,7 @@
   
   <div id="index-videos" class="container-fluid container-padded bg-secondary">
     <h2>URY Sessions</h2>
-    <div class="row scroll-horiz">
-      <div class="col-10 col-sm-7 col-md-4 col-lg-3">
-        <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
-      </div>
-      <div class="col-10 col-sm-7 col-md-4 col-lg-3">
-        <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
-      </div>
-      <div class="col-10 col-sm-7 col-md-4 col-lg-3">
-        <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
-      </div>
-      <div class="col-10 col-sm-7 col-md-4 col-lg-3">
-        <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
-      </div>
-      <div class="col-10 col-sm-7 col-md-4 col-lg-3">
-        <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" class="img-fluid" alt="...">
-      </div>
-    </div>
+		<div id="youtube-video-slider" class="row scroll-horiz">
   </div>
   <div id="index-uryplayer" class="container-fluid container-padded bg-third">
     <h2>Podcasts</h2>
@@ -277,3 +261,6 @@
   </div> <!-- /outer containter -->
   {{end}}
 {{end}}
+<!-- Youtube slider script -->
+<script src="js/index.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
