Fixed a missing </div>

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -162,7 +162,8 @@
   
   <div id="index-videos" class="container-fluid container-padded bg-secondary">
     <h2>URY Sessions</h2>
-		<div id="youtube-video-slider" class="row scroll-horiz">
+    <div id="youtube-video-slider" class="row scroll-horiz">
+    </div>
   </div>
   <div id="index-uryplayer" class="container-fluid container-padded bg-third">
     <h2>Podcasts</h2>
