Added General OG To base.tmpl
I have created a general image to be used whenever a more specific one
isn’t provided (such as show image).
Created general og meta tags, and added twitter card.

--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -8,6 +8,16 @@
     <title>{{block "title" .}}University Radio York{{end}}</title>   
 
     {{block "open-graph" .}}
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@URY1350"/>
+    <meta name="twitter:creator" content="@URY1350"/>
+
+    <meta property="og:type" content="website"/> <!-- NEED TO UNDERSTAND THIS TAG BETTER! -->
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:url" content="https://ury.org.uk/"/>
+    <meta property="og:image" content="https://ury.org.uk/images/general-open_graph.jpg"/>
+    <meta property="og:title" content="University Radio York"/>
+    <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website." />
     {{end}}
 
     <link rel="stylesheet" href="/css/main.scss.css" type="text/css" />
