--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -12,7 +12,7 @@
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
 
-    <meta property="og:type" content="website"/> <!-- NEED TO UNDERSTAND THIS TAG BETTER! -->
+    <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB" />
     <meta property="og:url" content="https://ury.org.uk/"/>
     <meta property="og:image" content="https://ury.org.uk/images/general-open_graph.jpg"/>
