Created OG Tags for show.tmpl
I have added OG Tags for show.tmpl.
There are comments that need resolved.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,3 +1,20 @@
+<!-- !!NOT SURE WHERE IT GOES!!
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@URY1350"/>
+    <meta name="twitter:creator" content="@URY1350"/>
+ 
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:url" content="https://ury.org.uk/"/>
+
+    !!IS THERE SOME WAY TO GET THE UNIQUE URL FOR THIS PAGE?? ^^
+    
+    <meta property="og:title" content="University Radio York | {{.Show.Title}}"/>
+    <meta property="{{html .Show.Description}}"/>
+	{{if .Show.Photo}}
+		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
+	{{end}}	
+    <meta property="og:type" content="website"/> 
+-->
 {{define "content"}}
 {{with .PageData}}
 
