--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -1,24 +1,27 @@
-<!-- !!NOT SURE WHERE IT GOES!!
+{{block "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
- 
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:url" content="https://ury.org.uk/"/>
 
-    !!IS THERE SOME WAY TO GET THE UNIQUE URL FOR THIS PAGE?? ^^
+    //@TODO: Get URL of page.
+    <meta property="og:url" content="https://ury.org.uk/"/>
     
     <meta property="og:title" content="University Radio York | {{.Name}} Profile"/>
+
+    //@TODO: Remove html so it is just plain text.
     <meta property="og:description" content="{{html .Bio}}" />
+
     <meta property="og:image" content="https://ury.org.uk{{.Photo}}"/>
     <meta property="og:type" content="profile"/> 
-    <meta property="profile:username" content=""/> 
-    !! Do People have usernames??
-    !! Can I Get Firstname Seperate to Lastname?
-    <meta property="profile:first_name" content=""/> 
-    <meta property="profile:last_name" content=""/>
-
--->
+    
+    //@TODO: Retrive Person ID.
+    //<meta property="profile:username" content=""/> 
+    
+    //@TODO: Need to retrive firstname and lastname seperately.  
+    //<meta property="profile:first_name" content=""/>
+    //<meta property="profile:last_name" content=""/> 
+{{end}}
 
 {{define "content"}}
 
