--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -11,13 +11,14 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
-
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB" />
-    <meta property="og:url" content="https://ury.org.uk/"/>
-    <meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
     <meta property="og:title" content="University Radio York"/>
-    <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website." />
+    <meta property="og:description" content="University Radio York (URY) is the student radio station for the University of York, broadcasting 24 hours a day during term time on 1350am across campus, and worldwide via this website."/>
+    <meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
+    
+    //@TODO: Get URL for page.
+    <meta property="og:url" content="https://ury.org.uk/"/>
     {{end}}
 
     <link rel="stylesheet" href="/css/main.scss.css" type="text/css" />
