Implements open-graph block in show.tmpl
I have added the meta tags into the open-graph block of show.tmpl.

There is still a couple of TODOs.
- Remove HTML from show descriptions.
- Get URL for page.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,20 +1,22 @@
-<!-- !!NOT SURE WHERE IT GOES!!
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@URY1350"/>
-    <meta name="twitter:creator" content="@URY1350"/>
- 
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:url" content="https://ury.org.uk/"/>
-
-    !!IS THERE SOME WAY TO GET THE UNIQUE URL FOR THIS PAGE?? ^^
-    
-    <meta property="og:title" content="University Radio York | {{.Show.Title}}"/>
-    <meta property="{{html .Show.Description}}"/>
+{{block "open-graph" .}}
+	<meta name="twitter:card" content="summary_large_image"/>
+	<meta name="twitter:site" content="@URY1350"/>
+	<meta name="twitter:creator" content="@URY1350"/>
+	<meta property="og:locale" content="en_GB"/>
+	<meta property="og:title" content="University Radio York | {{.Show.Title}}"/>
 	{{if .Show.Photo}}
 		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
+	{{else}}
+		<meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
 	{{end}}	
-    <meta property="og:type" content="website"/> 
--->
+	<meta property="og:type" content="website"/>
+
+	//@TODO: Remove HTML, so it leaves plain text.
+	// <meta property="{{html .Show.Description}}"/>
+	
+	//@TODO: Get URL for page.
+	<meta property="og:url" content="https://ury.org.uk/"/>
+{{end}}
 {{define "content"}}
 {{with .PageData}}
 
