--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -7,9 +7,7 @@
     <meta property="og:title" content="Want to help York make incredible award winning radio?"/>
     <meta property="og:description" content="Want to join one of the best, largest and most diverse societies university has to offer? Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen, play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you."/>
     <meta property="og:image" content="https://ury.org.uk/images/open_graph-get_involved.jpg"/>
-
-    //@TODO: Get URL of page/
-    <meta property="og:url" content="https://ury.org.uk/"/>  
+    <meta property="og:url" content="https://ury.org.uk/getinvolved"/>  
 {{end}}
 
 {{define "content"}}
