--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,4 +1,6 @@
-.btn {
+$button-color: $button-color;
+
+btn {
   border-radius: .4em;
   padding: .25em 1em;
   font-family: $font-family-heading;
@@ -8,33 +10,33 @@
 
   &.btn-primary {
     background: $blue;
-    color: #FFF;
-    border: 2px solid #FFF;
+    color: $button-color;
+    border: 2px solid $button-color;
 
     &:hover {
-      background: #FFF;
+      background: $button-color;
       color: $blue;
     }
   }
 
   &.btn-primary-inverse {
-    background: #FFF;
+    background: $button-color;
     color: $blue;
-    border: 2px solid #FFF;
+    border: 2px solid $button-color;
 
     &:hover {
       background: $blue;
-      color: #FFF;
+      color: $button-color;
     }
   }
 
   &.btn-red {
     background: $red;
-    color: #FFF;
-    border: 2px solid #FFF;
+    color: $button-color;
+    border: 2px solid $button-color;
 
     &:hover {
-      background: #FFF;
+      background: $button-color;
       color: $red;
     }
   }
