--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -4,6 +4,7 @@
     <meta name="twitter:creator" content="@URY1350"/>
     <meta property="og:locale" content="en_GB" />
     <meta property="og:url" content="https://ury.org.uk/people/{{.User.MemberID}}"/>
+    <meta property="og:title" content="{{.longName}} | {{.User.Fname}} {{.User.Sname}}  Profile"/>
     
     //@TODO: Remove html so it is just plain text.
     <meta property="og:description" content="{{html .User.Bio}}" />
