Replaced `University Radio York` in titles too `{{.longName}}`
Updated base.tmpl and show.tmpl to use `{{.longName}}` in the OG Title
tags rather than `University Radio York`.

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -3,7 +3,7 @@
 	<meta name="twitter:site" content="@URY1350"/>
 	<meta name="twitter:creator" content="@URY1350"/>
 	<meta property="og:locale" content="en_GB"/>
-	<meta property="og:title" content="University Radio York | {{.Show.Title}}"/>
+	<meta property="og:title" content="{{.longName}} | {{.Show.Title}}"/>
 	{{if .Show.Photo}}
 		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
 	{{else}}
