Corrected Block to define

--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -1,4 +1,4 @@
-{{block "open-graph" .}}
+{{define "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
