Added Title Content To Each Template

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -1,3 +1,5 @@
+{{define "title" .}}{{.shortName}} | About{{end}}
+
 {{define "content"}}
 <div class="container-fluid banner-2">
   <div class="container">
