--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -1,10 +1,12 @@
+{{define "title" .}}{{.shortName}} | {{with .PageData}}{{.User.Fname}} {{.User.Sname}}{{end}}  Profile{{end}}
+
 {{define "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@URY1350"/>
     <meta name="twitter:creator" content="@URY1350"/>
     <meta property="og:locale" content="en_GB" />
     <meta property="og:url" content="https://ury.org.uk/people/{{.User.MemberID}}"/>
-    <meta property="og:title" content="{{.longName}} | {{.User.Fname}} {{.User.Sname}}  Profile"/>
+    <meta property="og:title" content="{{.shortName}} | {{.User.Fname}} {{.User.Sname}}  Profile"/>
     
     //@TODO: Remove html so it is just plain text.
     <meta property="og:description" content="{{html .User.Bio}}" />
