--- a/views/season.tmpl
+++ b/views/season.tmpl
@@ -1,3 +1,5 @@
+{{define "title" .}}{{.shortName}} | {{with .PageData}}{{.Season.Title}}{{end}}{{end}}
+
 {{define "content"}}
 {{with .PageData}}
 
