--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -1,3 +1,4 @@
+{{define "title" .}}{{.shortName}} | Get Involved{{end}}
 {{define "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@URY1350"/>
