--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -1,3 +1,5 @@
+{{define "title" .}}{{.shortName}} | {{with .PageData}}{{.Show.Title}}{{end}}{{end}}
+
 {{define "open-graph" .}}
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:site" content="@URY1350"/>
@@ -12,8 +14,8 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://ury.org.uk/schedule/shows/{{.ShowID}}/"/>
 
-	//@TODO: Remove HTML, so it leaves plain text.
-	// <meta property="{{html .Show.Description}}"/>
+	<!-- @TODO: Remove HTML, so it leaves plain text.
+	<meta property="{{html .Show.Description}}"/> -->
 {{end}}
 {{define "content"}}
 {{with .PageData}}
