Updated OpenGraph URLs to use URL Prefix

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -7,12 +7,12 @@
 	<meta property="og:locale" content="en_GB"/>
 	<meta property="og:title" content="{{.longName}} | {{.Show.Title}}"/>
 	{{if .Show.Photo}}
-		<meta property="og:image" content="https://ury.org.uk{{.Show.Photo}}"/>
+		<meta property="og:image" content="{{url "/{{.Show.Photo}}"}}"/>
 	{{else}}
-		<meta property="og:image" content="https://ury.org.uk/images/open_graph-general.jpg"/>
+		<meta property="og:image" content="{{url "/images/open_graph-general.jpg"}}"/>
 	{{end}}	
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="https://ury.org.uk/schedule/shows/{{.ShowID}}/"/>
+	<meta property="og:url" content="{{url "/schedule/shows/{{.ShowID}}/"}}"/>
 
 	<!-- @TODO: Remove HTML, so it leaves plain text.
 	<meta property="{{html .Show.Description}}"/> -->
