Rename Memberid to MemberID to match myradio-go

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -63,7 +63,7 @@
       <div class="container outer page1-credits-people">
         <h2>Credits</h2>
         {{range .Timeslot.Credits}}
-          <a href="/people/{{.User.Memberid}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
+          <a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
         {{end}}
 
       </div> <!-- /outer containter -->
