--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -41,7 +41,7 @@
 	  </div> <!-- /outer containter -->
 	  <div class="container outer page1-credits-people">
 	  	{{range .Show.Credits}}
-				<a href="/people/{{.User.Memberid}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
+				<a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
 			{{end}}
 
     </div> <!-- /outer containter -->
@@ -58,7 +58,7 @@
 	</h2>
 	<p>
 		{{range .Show.Credits}}
-			<a href="/people/{{.User.Memberid}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
+			<a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
 		{{end}}
 	</p>
 
